k3s/manifests/backing-services/mailpit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailpit-deployment
  labels:
    app: mailpit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailpit
  template:
    metadata:
      name: mailpit
      labels:
        app: mailpit
    spec:
      containers:
        - name: mailpit
          image: axllent/mailpit
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8025
              protocol: TCP
            - containerPort: 1025
              protocol: TCP
          volumeMounts:
            - name: mailpit-data
              mountPath: /data
      volumes:
        - name: mailpit-data
          persistentVolumeClaim:
            claimName: mailpit-pvc
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: mailpit-service
spec:
  selector:
    app: mailpit
  ports:
    - protocol: TCP
      port: 8025
      targetPort: 8025
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailpit-webui-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: mailpit.playground.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mailpit-service
                port:
                  number: 8025
